<resources>
    <string name="app_name">Cliente VIP</string>

    <!--Tela inicial-->
    <string name="MeusDados">MEUS DADOS</string>
    <string name="BemVindo">BEM-VINDO</string>
    <string name="atualizarMeusDados">ATUALIZAR MEUS DADOS</string>
    <string name="excluirMinhaConta">EXCLUIR MINHA CONTA</string>
    <string name="consultarClientes">CONSULTAR CLIENTES VIP</string>
    <string name="sair">SAIR</string>

    <!--Tela de credenciais-->
    <string name="finalizandoCredenciais">FINALIZANDO...</string>
    <string name="nome">NOME:</string>
    <string name="email">EMAIL</string>
    <string name="digite_seu_nome">Informe seu nome</string>
    <string name="digite_seu_email">Informe seu email</string>
    <string name="senha">SENHA</string>
    <string name="informe_sua_senha">Informe sua senha</string>
    <string name="repita_sua_senha">REPITA SUA SENHA</string>
    <string name="confirme_sua_senha">Confirme sua senha</string>
    <string name="li_e_concordo_com_os_termos_de_uso">Li e concordo com os termos de uso</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="voltar">Voltar</string>

    <!--Tela de Login-->
    <string name="clientes">Clientes</string>
    <string name="login">Login</string>
    <string name="digite_sua_senha">Digite sua senha</string>
    <string name="infome_o_e_mail_cadastrado">Digite seu email</string>
    <string name="informe_a_senha_cadastrada">Digite sua senha</string>
    <string name="lembrar">Lembrar</string>
    <string name="recuperar_senha">Esqueci a senha</string>
    <string name="acessar">ACESSAR</string>
    <string name="seja_vip">CADASTRE-SE</string>
    <string name="ler_politica_de_privacidade_termos_de_uso">Ler Política de Privacidade - Termos de Uso</string>
    <string name="versao_v1_0">Versão V1.0</string>

    <!--Tela de Clientes VIP-->
    <string name="clientesVip">Clientes VIP</string>
    <string name="novoVIP">NOVO VIP</string>
    <string name="primeiroNome">PRIMEIRO NOME</string>
    <string name="informe_seu_nome">Informe seu nome</string>
    <string name="sobrenome">Sobrenome</string>
    <string name="informe_seu_sobrenome">Informe seu sobrenome</string>
    <string name="PessoaFisica">Pessoa Física</string>
    <string name="salvarEContinuar">SALVAR E CONTINUAR</string>
    <string name="cancelar">CANCELAR</string>
    <string name="novo_cadastro">NOVO CADASTRO</string>

    <!--Tela de Pessoa fisica-->
    <string name="pessoaFisica">PESSOA FÍSICA</string>
    <string name="cpf">CPF</string>
    <string name="informe_seu_cpf">Informe seu CPF</string>
    <string name="nomeCompleto">Nome Completo</string>
    <string name="informe_nomeCompleto">Informe o nome completo</string>
    <string name="salvar_e_concluir">SALVAR E CONCLUIR</string>

    <!--Tela de Pessoa Juridica-->
    <string name="pessoaJuridica">PESSOA JURÍDICA</string>
    <string name="cnpj">CNPJ</string>
    <string name="informe_seu_cnpj">Informe seu CNPJ</string>
    <string name="razaoSocial">Razão Social</string>
    <string name="informe_sua_razaoSocial">Informe razão social</string>
    <string name="aberturaData">dd/mm/aaaa</string>
    <string name="data_de_abertura_da_empresa">Data de Abertura: </string>
    <string name="simplesNacional">Simples Nacional</string>
    <string name="mei">MEI</string>

    <!--Tela de Recuperar Senha-->
    <string name="recuperarSenha">RECUPERAR SENHA</string>
    <string name="emailCadastrado">Informe o email cadastrado</string>
    <string name="recuperar">RECUPERAR</string>
    <string name="email_para_recuperacao">Email para recuperação</string>
    <string name="redefinir_senha">REDEFINIR SENHA</string>
    <string name="lhe_enviaremos_um_e_mail_com_mais_informa_es_sobre_como_redefinir_sua_senha">Lhe enviaremos um e-mail com mais informações sobre como redefinir sua senha</string>

    <!--Tela meus dados-->
    <string name="meusDados">MEUS DADOS</string>

</resources>